change variable types from long to Long, remove update service method, and checkstyle fix